[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://EnemyPatterns.gd" type="Script" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Enemy = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 285.129, 795.469 )

[node name="EnemyPatterns" type="Node" parent="."]
script = ExtResource( 5 )

[node name="EnemyWaveTimer" type="Timer" parent="."]
wait_time = 3.782
autostart = true
[connection signal="timeout" from="EnemyWaveTimer" to="." method="_on_EnemyWaveTimer_timeout"]
